--- a/web/index.html
+++ b/web/index.html
@@ -6,9 +6,34 @@
     <title>Nekowiii Random Dance</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
-    <script src='index.js'></script>
+    <script defer src='index.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
-    
+
+    <header>
+        <div>
+            <h1>Nekowiii Random Dance</h1>
+        </div>
+    </header>
+
+    <main>
+        <div id="inputs">
+
+            <div id="divInputGrupo">
+                <input id="inputGrupo" type="" placeholder="Elige Grupo..">
+            </div>
+
+            <div id="divInputCancion">
+                <input id="inputCancion" type="" placeholder="Elige Canción..">
+            </div>
+
+            <div id="botonInputs">
+                <button type="submit">Enviar</button>
+            </div>
+        </div>
+    </main>
+
+    <footer></footer>
 </body>
 </html>
