--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div id="botonInputs">
-                <button type="submit">Enviar</button>
+                <button type="button">Enviar</button>
             </div>
         </div>
     </main>
