--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,9 @@
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
     <script defer src='index.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Prompt:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,16 +24,46 @@
         <div id="inputs">
 
             <div id="divInputGrupo">
-                <input id="inputGrupo" type="" placeholder="Elige Grupo..">
+                <input id="inputGrupo" type="" placeholder="">
             </div>
 
-            <div id="divInputCancion">
-                <input id="inputCancion" type="" placeholder="Elige Canción..">
+        </div>
+
+        <div id="listaGrupos">
+
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="botonInputs">
-                <button type="button">Enviar</button>
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
             </div>
+
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div>
+
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div>
+
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div>
+
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div>
+            <div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div><div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div><div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div><div id="grupo">
+                <div id="nombreGrupo">asdf</div>
+            </div>
+
         </div>
     </main>
 
