--- a/web/index.html
+++ b/web/index.html
@@ -31,36 +31,36 @@
 
         <div id="listaGrupos">
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
-            <div id="grupo">
+            <div class="grupo">
                 <div id="nombreGrupo">asdf</div>
-            </div><div id="grupo">
+            </div><div class="grupo">
                 <div id="nombreGrupo">asdf</div>
-            </div><div id="grupo">
+            </div><div class="grupo">
                 <div id="nombreGrupo">asdf</div>
-            </div><div id="grupo">
+            </div><div class="grupo">
                 <div id="nombreGrupo">asdf</div>
             </div>
 
