--- a/web/index.html
+++ b/web/index.html
@@ -20,49 +20,25 @@
         </div>
     </header>
 
-    <main>
-        <div id="inputs">
+    <main id="main">
 
-            <div id="divInputGrupo">
-                <input id="inputGrupo" type="" placeholder="">
+        <div id="eleccionGrupo">
+
+            <div id="inputs">
+
+                <div id="divInputGrupo">
+                    <input id="inputGrupo" type="" placeholder="">
+                </div>
+
+            </div>
+
+            <div id="listaGrupos">
+
             </div>
 
         </div>
 
-        <div id="listaGrupos">
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
-            <div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div><div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div><div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div><div class="grupo">
-                <div id="nombreGrupo">asdf</div>
-            </div>
+        <div id="eleccionCancion">
 
         </div>
     </main>
