--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
             <div id="inputs">
 
                 <div id="divInputGrupo">
-                    <input id="inputGrupo" type="" placeholder="">
+                    <input id="inputGrupo" type="" placeholder="Elige tu canción favorita...">
                 </div>
 
             </div>
